Search movies function in browse page and not showing users name error fixed

--- a/Frontend/src/components/CommentSection/comment.css
+++ b/Frontend/src/components/CommentSection/comment.css
@@ -37,6 +37,6 @@
 }
 
 .deled{
-    margin-top: -20px;
+    margin-top: -40px;
     margin-left: 360px;
 }
