--- a/Frontend/src/components/Playlist/playlist.css
+++ b/Frontend/src/components/Playlist/playlist.css
@@ -49,10 +49,10 @@
 }
 
 .playDesc{
-    margin-top: 20px;
+    margin-top: 60px;
     margin-bottom: -50px;
-    margin-left: 350px;
-    color:#01bf71;
+    margin-left: 110px;
+    color:red;
     font-style: bold;
 
 }
